--- a/npm/package.json
+++ b/npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "celtable",
-  "version": "0.1.3",
+  "version": "0.2.1",
   "description": "tree-table element-ui table plus",
   "main": "./lib/ctable.umd.min.js",
   "keywords": [
@@ -11,7 +11,7 @@
     "drag-row",
     "drag-column"
   ],
-  "author": "chen406226",
+  "author": "Mr Zhang",
   "scripts": {
     "serve": "vue-cli-service serve",
     "start": "vue-cli-service serve",
@@ -20,6 +20,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-add-module-exports": "^1.0.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "sortablejs": "^1.12.0",
